Make sure commit date is visible

--- a/styles/Resume.css
+++ b/styles/Resume.css
@@ -137,6 +137,10 @@
     margin-top: 1.5rem;
 }
 
+.margin-top-md {
+    margin-top: 2.5rem;
+}
+
 .text-uppercase {
  text-transform: uppercase;
 }
